<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000">

        <ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_alignParentTop="true"
                    android:id="@+id/top_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="120sp"
                        android:layout_height="160sp"
                        android:padding="10sp">

                        <ImageView
                            android:layout_gravity="center"
                            android:id="@+id/movie_details_icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/empty_view_bg"/>

                        <ImageView
                            android:id="@+id/play_trailer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:background="#80000000"
                            android:src="@drawable/ic_movie_trailer"
                            android:padding="30sp"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/movie_details_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Avengers: Infinity War"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center_vertical"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingStart="5sp"
                            android:paddingEnd="5sp"/>

                        <TextView
                            android:id="@+id/movie_details_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2018"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center_vertical"
                            android:textSize="18sp"
                            android:textStyle="italic"
                            android:paddingLeft="5sp"
                            android:paddingBottom="5sp"/>

                        <TextView
                            android:id="@+id/movie_details_genres"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Action/Adventure/Fiction/Sci-Fi/Mystery"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center_vertical"
                            android:textSize="15sp"
                            android:textStyle="italic|bold"
                            android:paddingStart="5sp"
                            android:paddingEnd="25sp"
                            android:paddingTop="5sp"
                            android:maxLines="1"
                            android:ellipsize="end"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/separate_view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#757575"
                    android:layout_below="@+id/top_layout"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="5sp"/>

                <LinearLayout
                    android:id="@+id/imdb_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/separate_view1"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_likes"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/like_count"
                            android:layout_marginStart="10sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            tools:text="213"
                            android:maxLines="1"
                            android:textColor="@android:color/white"
                            android:textStyle="italic"/>

                    </LinearLayout>

                    <View
                        android:id="@+id/separate_view00"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#757575"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="5sp"
                        android:layout_marginTop="5sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/keyword_imdb"
                        android:layout_gravity="center"
                        android:padding="10sp"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:fontFamily="sans-serif-condensed"/>

                    <RelativeLayout
                        android:layout_width="60sp"
                        android:layout_height="60sp"
                        android:layout_gravity="center">

                        <ProgressBar
                            android:id="@+id/movie_details_rating_bar"
                            android:layout_width="60sp"
                            android:layout_height="60sp"
                            android:layout_centerInParent="true"
                            style="?android:progressBarStyleHorizontal"
                            android:background="@drawable/rating_ring_bg"
                            android:progressDrawable="@drawable/rating_progress_ring"
                            android:max="100"/>

                        <TextView
                            android:id="@+id/movie_details_rating"
                            android:layout_width="60sp"
                            android:layout_height="60sp"
                            android:layout_centerInParent="true"
                            android:textSize="18sp"
                            tools:text="8.5"
                            android:textColor="#E0E0E0"
                            android:gravity="center" />

                    </RelativeLayout>

                    <View
                        android:id="@+id/separate_view01"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#757575"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="5sp"
                        android:layout_marginTop="5sp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_runtime"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/movie_runtime"
                            android:layout_marginStart="10sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            tools:text="192 mins"
                            android:maxLines="1"
                            android:textColor="@android:color/white"
                            android:textStyle="italic"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/separate_view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#757575"
                    android:layout_below="@+id/imdb_view"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="5sp"/>

                <TextView
                    android:id="@+id/synopsis_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imdb_view"
                    android:text="@string/keyword_synopsis"
                    android:padding="10dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic|bold"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="10sp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/details_synopsis_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/synopsis_header"
                    tools:text="Iron Man, Thor, the Hulk and the rest of the Avengers unite to battle their most powerful enemy yet -- the evil Thanos. On a mission to collect all six Infinity Stones, Thanos plans to use the artifacts to inflict his twisted will on reality. The fate of the planet and existence itself has never been more uncertain as everything the Avengers have fought for has led up to this moment."
                    android:textColor="#E0E0E0"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>

                <View
                    android:id="@+id/separate_view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#757575"
                    android:layout_below="@+id/details_synopsis_view"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="10sp"/>

                <TextView
                    android:id="@+id/cast_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/separate_view3"
                    android:text="@string/keyword_cast"
                    android:padding="10dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic|bold"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="10sp"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:id="@+id/list_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/cast_header"
                    android:orientation="vertical"/>

                <View
                    android:id="@+id/separate_view4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#757575"
                    android:layout_below="@+id/list_layout"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="10sp"/>

                <TextView
                    android:id="@+id/torrent_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/separate_view4"
                    android:text="@string/keyword_torrents"
                    android:padding="10dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic|bold"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="10sp"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/torrent_header">

                    <TextView
                        android:id="@+id/torrent_720p"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20sp"
                        android:text="@string/_720p"
                        android:textColor="#E0E0E0"
                        android:textStyle="italic"
                        android:padding="10sp"
                        android:background="@drawable/torrent_bg"
                        android:fontFamily="monospace"/>

                    <TextView
                        android:id="@+id/torrent_1080p"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20sp"
                        android:text="@string/_1080p"
                        android:textColor="#E0E0E0"
                        android:textStyle="italic"
                        android:padding="10sp"
                        android:background="@drawable/torrent_bg"
                        android:fontFamily="monospace"/>

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>